updated structure links and page headings

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Mainstream guide example
+  Register a lasting power of attorney: Overview
 {% endblock %}
 
 {% block header %}
@@ -18,11 +18,11 @@
         href: "#"
       },
       {
-        text: "Section",
+        text: "Births, deaths, marriages and care",
         href: "#"
       },
       {
-        text: "Subsection"
+        text: "Lasting power of attorney, being in care and managing finances"
       }
     ]
   }) }}
