--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Mainstream guide example
+Register a lasting power of attorney: Preparing to make your LPA
 {% endblock %}
 
 {% block header %}
@@ -18,11 +18,11 @@
         href: "#"
       },
       {
-        text: "Section",
+        text: "Births, deaths, marriages and care",
         href: "#"
       },
       {
-        text: "Subsection"
+        text: "Lasting power of attorney, being in care and managing finances"
       }
     ]
   }) }}
@@ -35,7 +35,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Page title
+        Register a lasting power of attorney
       </h1>
 
       <aside class="govuk-prototype-kit-common-templates-mainstream-guide-contents-list" role="complementary">
@@ -53,7 +53,7 @@
               Preparing to make your lasting power of attorney
             </li>
             <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+              <a href="/register-lasting-power-of-attorney/make-lpa">
                 Make your lasting power of attorney
               </a>
             </li>
@@ -88,8 +88,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-m">
-        Page content heading
+      <h2 class="govuk-heading-l">
+        Preparing to make your lasting power of attorney
       </h2>
       
       <p>Content goes here.</p>
@@ -103,7 +103,7 @@
         },
         next: {
           labelText: "Make your lasting power of attorney",
-          href: "#"
+          href: "/register-lasting-power-of-attorney/make-lpa"
         }
       }) }}
 
