Updated next page link in Make an LPA

--- a/app/views/register-lasting-power-of-attorney/make-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/make-lpa.html
@@ -98,8 +98,8 @@ Register a lasting power of attorney: Make your LPA
 
       {{ govukPagination({
         previous: {
-          labelText: "Page 1 title",
-          href: "#"
+          labelText: "Preparing to make a lasting power of attorney",
+          href: "/register-lasting-power-of-attorney/prepare-lpa"
         },
         next: {
           labelText: "Page 3 title",
