Updated links to certificate provider page

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -58,7 +58,7 @@
               </a>
             </li>
 			<li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+              <a href="/register-lasting-power-of-attorney/certificate-provider">
                 Act as a certificate provider
               </a>
             </li>
