--- a/app/views/register-lasting-power-of-attorney/make-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/make-lpa.html
@@ -58,7 +58,7 @@ Register a lasting power of attorney: Make your LPA
               
             </li>
 			<li aria-current="true" class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+              <a href="/register-lasting-power-of-attorney/certificate-provider">
                 Act as a certificate provider
               </a>
             </li>
@@ -102,8 +102,8 @@ Register a lasting power of attorney: Make your LPA
           href: "/register-lasting-power-of-attorney/prepare-lpa"
         },
         next: {
-          labelText: "Page 3 title",
-          href: "#"
+          labelText: "Act as a certificate provider",
+          href: "/register-lasting-power-of-attorney/certificate-provider"
         }
       }) }}
 
