Updating structural elements for the certificate provider chapter

--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Mainstream guide example
+Register a lasting power of attorney: Act as a certificate provider
 {% endblock %}
 
 {% block header %}
@@ -18,11 +18,11 @@
         href: "#"
       },
       {
-        text: "Section",
+        text: "Births, deaths, marriages and care",
         href: "#"
       },
       {
-        text: "Subsection"
+        text: "Lasting power of attorney, being in care and managing finances"
       }
     ]
   }) }}
@@ -35,7 +35,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Page title
+        Register a lasting power of attorney
       </h1>
 
       <aside class="govuk-prototype-kit-common-templates-mainstream-guide-contents-list" role="complementary">
@@ -44,17 +44,37 @@
             Contents
           </h2>
           <ol class="govuk-prototype-kit-common-templates-contents-list__list">
-            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed govuk-prototype-kit-common-templates-contents-list__list-item--active">
-              <a href="#">
-                Page 1
-              </a>
+            <li  class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed govuk-prototype-kit-common-templates-contents-list__list-item--active">
+              
+                <a href="/register-lasting-power-of-attorney">Overview</a>
+              
             </li>
-            <li aria-current="true" class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              Page 2
+            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed ">
+              <a href="/register-lasting-power-of-attorney/prepare-lpa">Preparing to make your lasting power of attorney</a>
             </li>
             <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
+              <a href="/register-lasting-power-of-attorney/make-lpa">
+                Make your lasting power of attorney
+              </a>
+            </li>
+			<li aria-current="true" class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
+              
+                Act as a certificate provider
+              
+            </li>
+			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
               <a href="#">
-                Page 3
+                Agree to be an attorney
+              </a>
+            </li>
+			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
+              <a href="#">
+                After the lasting power of attorney is registered
+              </a>
+            </li>
+			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
+              <a href="#">
+                Contact the Office of the Public Guardian
               </a>
             </li>
           </ol>
@@ -68,8 +88,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-m">
-        Page content heading
+      <h2 class="govuk-heading-l">
+        Act as a certificate provider
       </h2>
       
       <p>Content goes here.</p>
