Updating next/previous page links

--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -98,11 +98,11 @@ Register a lasting power of attorney: Act as a certificate provider
 
       {{ govukPagination({
         previous: {
-          labelText: "Page 1 title",
-          href: "#"
+          labelText: "Make your lasting power of attorney",
+          href: "/register-lasting-power-of-attorney/make-lpa"
         },
         next: {
-          labelText: "Page 3 title",
+          labelText: "Agree to be an attorney",
           href: "#"
         }
       }) }}
