Updating navigation to add attorney page

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -63,7 +63,7 @@
               </a>
             </li>
 			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+              <a href="/register-lasting-power-of-attorney/attorney">
                 Agree to be an attorney
               </a>
             </li>
