--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -63,7 +63,7 @@ Register a lasting power of attorney: Act as a certificate provider
               
             </li>
 			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+              <a href="/register-lasting-power-of-attorney/attorney">
                 Agree to be an attorney
               </a>
             </li>
