--- a/app/views/register-lasting-power-of-attorney/attorney.html
+++ b/app/views/register-lasting-power-of-attorney/attorney.html
@@ -67,8 +67,8 @@ Register a lasting power of attorney: Agree to be an attorney
                 Agree to be an attorney
              
             </li>
-			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+			            <li aria-current="true" class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
+              <a href="/register-lasting-power-of-attorney/after-lpa-registered">
                 After the lasting power of attorney is registered
               </a>
             </li>
@@ -103,7 +103,7 @@ Register a lasting power of attorney: Agree to be an attorney
         },
         next: {
           labelText: "After the lasting power of attorney is registered",
-          href: "#"
+          href: "/register-lasting-power-of-attorney/after-lpa-registered"
         }
       }) }}
 
