Adding Contact the OPG to the navigation

--- a/app/views/register-lasting-power-of-attorney/after-lpa-registered.html
+++ b/app/views/register-lasting-power-of-attorney/after-lpa-registered.html
@@ -62,18 +62,18 @@ Register a lasting power of attorney: After the lpa is registered
                 Act as a certificate provider
         </a>
             </li>
-			            <li aria-current="true" class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
+			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
                     <a href="/register-lasting-power-of-attorney/attorney">
                 Agree to be an attorney
               </a>
             </li>
-			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
+			            <li aria-current="true" class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
               
                 After the lasting power of attorney is registered
               
             </li>
 			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+              <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">
                 Contact the Office of the Public Guardian
               </a>
             </li>
@@ -103,7 +103,7 @@ Register a lasting power of attorney: After the lpa is registered
         },
         next: {
           labelText: "Contact the Office of the Public Guardian",
-          href: "#"
+          href: "/register-lasting-power-of-attorney/contact-office-of-public-guardian"
         }
       }) }}
 
