--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -73,7 +73,7 @@ Register a lasting power of attorney: Preparing to make your LPA
               </a>
             </li>
 			            <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+                    <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">
                 Contact the Office of the Public Guardian
               </a>
             </li>
