Updating register chapter content

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -122,8 +122,30 @@
 			<li>gives you more control</li></ul>
 	
 	<h2 class="govuk-heading-l">Who makes an LPA</h2>	
-			
+	<p>You make your own lasting power of attorney but you can get help from a professional, like a solicitor, or from someone else you trust.</p>
+  <p>You must:</p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li>be aged 18 or over</li>
+    <li>have mental capacity when the LPA is made</li>
+  </ul>	
 	
+  <p>You do not need to live in the UK or be a British citizen. [Awaiting current legal guidance for people who are ‘not habitually resident’.]</p>
+  <p>Other people involved in making an lasting power of attorney are your:</p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li>attorneys - the people you choose to make decisions on your behalf</li>
+  <li>certificate provider - who checks that your LPA is legitimate and witnesses you signing it</li>
+  </ul>
+
+  <h2 class="govuk-heading-l">How much does an LPA cost</h2>
+  <p>Registering an LPA costs £82.</p>
+  <p>If you're registering a personal welfare LPA and a property and affairs LPA it will cost £164 in total.</p>
+  <p>If your annual income is under £12,000 you might be eligible for a 50% discount. If you're receiving certain income-related benefits you won't have to pay anything at all.</p>
+
+  <h2 class="govuk-heading-l">How long does making an LPA take</h2>
+  <p>When everyone has signed and returned the LPA, there's a waiting period before it's registered. During the 4 week waiting period, people can <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">make objections</a> to the LPA.</p>
+
+  <p></p>
+
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
