Complete adding content for Overview

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -144,8 +144,16 @@
   <h2 class="govuk-heading-l">How long does making an LPA take</h2>
   <p>When everyone has signed and returned the LPA, there's a waiting period before it's registered. During the 4 week waiting period, people can <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">make objections</a> to the LPA.</p>
 
-  <p></p>
+  <h2 class="govuk-heading-l">Get help from the Office of the Public Guardian</h2>
 
+  <p>Help deciding if you should make a lasting power of attorney.</p>
+<p><a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">Contact Office of the Public Guardian(OPG)</a> if you:</p>
+<ul class="govuk-list govuk-list--bullet">
+  <li>need help deciding if you should make an LPA</li>
+  <li>have any safeguarding concerns</li>
+</ul>
+
+<p>Anyone can <a href="/object-registration-power-attorney">object to the LPA</a> which may prevent it from being registered.</p>
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
