Added content to certificate provider chapter

--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -92,7 +92,17 @@ Register a lasting power of attorney: Act as a certificate provider
         Act as a certificate provider
       </h2>
       
-      <p>Content goes here.</p>
+      <p>You may be asked to help someone (the donor) make their lasting power of attorney (LPA) as a certificate provider.</p>
+      <p>Providing a certificate for an LPA confirms that in your opinion:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>the donor understands the decisions they’ve made in the LPA and its purpose</li>
+        <li>the donor is not under pressure to make the LPA</li>
+        <li>the donor is who they say they are</li>
+        <li>there’s no other reason, that you know of, for their LPA not to be created</li>
+      </ul>
+
+
+<h2 class="govuk-heading-l">Discuss the LPA with the donor</h2>
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
