--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -91,8 +91,28 @@ Register a lasting power of attorney: Preparing to make your LPA
       <h2 class="govuk-heading-l">
         Preparing to make your lasting power of attorney
       </h2>
-      
-      <p>Content goes here.</p>
+
+      <h3 class="govuk-heading-m">Types of lasting power of attorney (LPA)</h3>
+      <p>There are 2 types of LPA:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>personal welfare</li>
+        <li>property and affairs</li>
+      </ul>
+
+      <p>You can choose to make one type or both. You do not need to have the same attorneys on both LPAs.</p>
+
+      <h4 class="govuk-heading-s">Personal welfare lasting power of attorney</h4>
+      <p>Use this LPA to give an attorney the power to make decisions about things like:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>your daily routine, for example washing, dressing, eating</li>
+        <li>medical care</li>
+        <li>moving into a care home</li>
+        <li>life-sustaining treatment</li>
+      </ul>
+
+      <p>It can only be used when you're unable to make your own decisions.</p>
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
