Added more content to 'certificate provider'

--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -104,6 +104,74 @@ Register a lasting power of attorney: Act as a certificate provider
 
 <h2 class="govuk-heading-l">Discuss the LPA with the donor</h2>
 
+<p>You’ll need to read the LPA and talk to the donor to check they understand it. You should discuss the LPA in private, without attorneys or other people present.</p>
+<p>You should consider if they can: </p>
+<ul class="govuk-list govuk-list--bullet">
+  <li>understand how the LPA works</li>
+  <li>retain that information long enough to be able to make a decision</li>
+  <li>weigh up the information available to make the decision</li>
+  <li>communicate their decision, for example: by talking, using sign language or movements like squeezing a hand</li>
+</ul>
+
+<p>If they seem unusually anxious or are acting differently to how they normally would, consider if they're being pressured into making the LPA.</p>
+
+<h2 class="govuk-heading-l">If you agree with the LPA registration</h2>
+
+<h3 class="govuk-heading-m">Sign the LPA as a witness</h3>
+
+<p>If you’re confident the donor understands the LPA you’ll need to watch the donor sign the LPA. You must confirm you’ve witnessed this by signing it yourself, either online or on paper.</p>
+
+<h3 class="govuk-heading-m">Prove your identity and sign to certify the LPA</h3>
+
+<p>You’ll need to prove your identity before you can provide a certificate.</p>
+
+<p>If you fail the identity check, the donor will have to make a new LPA.</p>
+
+<h2 class="govuk-heading-l">If you do not agree with the LPA registration</h2>
+
+<p>If you do not feel you can certify the LPA, do not sign it and  <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">contact the Office of the Public Guardian (OPG)</a> instead.</p>
+
+<p>You can also <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">object to the LPA</a> which could prevent it from being registered.</p>
+
+<h2 class="govuk-heading-l">If you do not want to be a certificate provider</h2>
+
+<p>You need to agree to be someone's certificate provider. You can refuse the role by telling the donor to contact OPG to start the LPA process again.</p>
+
+<h2 class="govuk-heading-l">How to provide a certificate for the LPA</h2>
+
+<p>Read the LPA and talk to the donor about it. Witness the donor's signature.</p>
+
+<p>OPG will contact you to certify the LPA separately. You can do it online or by post.</p>
+
+<div class="govuk-inset-text">
+  <p>If your personal information is incorrect in the LPA, you’ll need to <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">contact OPG</a> which could prevent it from being registered.</p>
+</div>
+
+<p>You'll also need to prove your identity as part of the process.</p>
+
+<h2 class="govuk-heading-l">Providing a certificate online</h2>
+
+<p>You’ll need documents or information to <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-types">prove your identity using GOV.UK One Login</a>.</p>
+
+<p>If you’ve not used GOV.UK One Login before, you’ll be asked to set up an account.</p>
+
+<a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+  Start now
+  <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+  </svg>
+</a>
+
+<h2 class="govuk-heading-l">Providing a certificate by post</h2>
+
+<p>If you've received a letter from OPG about being a certificate provider, it should include the paper form. If not, <a href="https://www.gov.uk/make-lasting-power-of-attorney/contact-the-office-of-the-public-guardian">contact OPG</a> and ask for a paper form to be sent to you.</p>
+
+<h2 class="govuk-heading-l">After you’ve certified the LPA</h2>
+
+<p>OPG will let you know when it has received your certification and have confirmed your identity.</p>
+
+<p>Your role in the process is complete.</p>
+
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
       {{ govukPagination({
