Change heading levels on Prepare chapter

--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -88,11 +88,11 @@ Register a lasting power of attorney: Preparing to make your LPA
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-l">
+      <h1 class="govuk-heading-l">
         Preparing to make your lasting power of attorney
-      </h2>
+      </h1>
 
-      <h3 class="govuk-heading-m">Types of lasting power of attorney (LPA)</h3>
+      <h2 class="govuk-heading-m">Types of lasting power of attorney (LPA)</h2>
       <p>There are 2 types of LPA:</p>
 
       <ul class="govuk-list govuk-list--bullet">
@@ -102,7 +102,7 @@ Register a lasting power of attorney: Preparing to make your LPA
 
       <p>You can choose to make one type or both. You do not need to have the same attorneys on both LPAs.</p>
 
-      <h4 class="govuk-heading-s">Personal welfare lasting power of attorney</h4>
+      <h3 class="govuk-heading-s">Personal welfare lasting power of attorney</h3>
       <p>Use this LPA to give an attorney the power to make decisions about things like:</p>
 
       <ul class="govuk-list govuk-list--bullet">
@@ -114,6 +114,47 @@ Register a lasting power of attorney: Preparing to make your LPA
 
       <p>It can only be used when you're unable to make your own decisions.</p>
 
+      <h3 class="govuk-heading-s">Property and affairs lasting power of attorney</h3>
+
+      <p>Use this LPA to give an attorney the power to make decisions about money and property for you, for example:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>managing a bank or building society account</li>
+        <li>paying bills</li>
+        <li>collecting benefits or a pension</li>
+        <li>selling your home</li>
+      </ul>
+
+      <p>It can be used as soon as it's registered, with your permission, or just when you're unable to make your own decisions.</p>
+
+      <h2 class="govuk-heading-l">
+        Attorneys
+      </h2>  
+
+      <p>You can choose one or more people to be your attorney.</p>
+
+    <p>If you only have one and they have to stop being your attorney, your LPA will end.</p>
+
+    <h3 class="govuk-heading-s">Who can be your attorney</h3>
+
+    <p>Your attorney needs to be 18 or over and have mental capacity to make their own decisions. They could be:</p>
+
+    <ul class="govuk-list govuk-list--bullet">
+      <li>a family member</li>
+      <li>a friend</li>
+      <li>a professional, for example a solicitor</li>
+      <li>a trust corporation if you're making a property and affairs LPA</li>
+    </ul>
+
+    <p>When choosing an attorney, think about:</p>
+
+    <ul class="govuk-list govuk-list--bullet">
+      <li>how well they look after their own affairs, for example their finances</li>
+      <li>how well you know them</li>
+      <li>if you trust them to make decisions in your best interests</li>
+      
+
+    </ul>
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
       {{ govukPagination({
