Added start now button on attorney chapter

--- a/app/views/register-lasting-power-of-attorney/attorney.html
+++ b/app/views/register-lasting-power-of-attorney/attorney.html
@@ -151,7 +151,13 @@ Register a lasting power of attorney: Agree to be an attorney
 
  <p>If you've not used GOV.UK One Login before, you'll be asked to set up an account.</p>
 
- <p>Start now button</p>
+ <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+  Start now
+  <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+  </svg>
+</a>
+
 
  <h3 class="govuk-heading-m">Read and sign the LPA by post</h3>
 
